force-app/main/default/objects/ExpoAreaImage__c/ExpoAreaImage__c.object-meta.xml
<CustomObject>
    <label>ExpoAreaImage</label>
    <nameField>
        <label>Title CN</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ExpoAreaImages</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>