force-app/main/default/objects/ExpoAreaImage__c/fields/CoverImg__c.field-meta.xml
<CustomField>
    <fullName>CoverImg__c</fullName>
    <formula>HYPERLINK(
&quot;/lightning/cmp/c__lwcWrapper?c__lwcName=uploadPicturesLWC&amp;c__versionId=&quot; &amp; CoverImgVersionId__c &amp; &quot;&amp;c__fileType=&quot;&amp; CoverImgFileType__c &amp; &quot;&amp;c__contentBodyId=&quot;&amp; CoverImgContentBodyId__c &amp; &quot;&amp;c__recordId=&quot;&amp; Id &amp; &quot;&amp;c__versionIdField=CoverImgVersionId__c&amp;c__contentBodyIdField=CoverImgContentBodyId__c&amp;c__fileTypeField=CoverImgFileType__c&amp;c__publicLinkField=CoverImgPublicLink__c&quot;,
IF (
ISBLANK( CoverImgVersionId__c ),
IMAGE(&quot;/logos/Custom/Plus_Primary/logo.png&quot;, &quot;Review&quot;, 20, 20),
IMAGE(&quot;/sfc/servlet.shepherd/version/renditionDownload?rendition=thumb240by180&amp;versionId=&quot; &amp; CoverImgVersionId__c &amp; &quot;&amp;operationContext=CHATTER&amp;contentId=&quot; &amp; CoverImgContentBodyId__c, &quot;Preview is generating, please refresh later&quot;, 180, 240)
),
&quot;_parent&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cover Img</label>
    <type>Text</type>
</CustomField>