force-app/main/default/objects/ExpoAreaImage__c/fields/TitleCN__c.field-meta.xml
<CustomField>
    <fullName>TitleCN__c</fullName>
    <formula>Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Title CN Invisible</label>
    <type>Text</type>
</CustomField>