force-app/main/default/objects/ExpoAreaImage__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>TitleEN__c</columns>
    <columns>ExpoId__c</columns>
    <columns>CoverImg__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>